cabal-version:      2.4
name:               knotty
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Paritosh Raj
maintainer:         paritosh@hasura.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable knotty
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,

    hs-source-dirs:   src-exe
    default-language: Haskell2010
